--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
     const root = createRoot(document.getElementById("root"));
     root.render(React.createElement(WeatherApp));
   </script>
+    <footer> <a href="https://github.com/FatimaamitaF/weatherajax" target="_blank"> Github Repository ❤️</a> </footer>
 </body>
 </html>
 
